# ChangeLog for dev-python/pyasn1
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1/ChangeLog,v 1.76 2014/09/03 17:13:21 ottxor Exp $

  03 Sep 2014; Christoph Junghans <ottxor@gentoo.org> pyasn1-0.1.7.ebuild:
  added ~x64-macos (tested by me)

  31 Jul 2014; Christoph Junghans <ottxor@gentoo.org> pyasn1-0.1.7.ebuild:
  added ~x86-macos (tested by me)

  29 Jul 2014; Anthony G. Basile <blueness@gentoo.org> pyasn1-0.1.6.ebuild,
  pyasn1-0.1.7.ebuild:
  Keyword ~mips

  10 May 2014; Ian Delaney <idella4@gentoo.org> pyasn1-0.1.7.ebuild:
  drop py2.6 pypy2_0 add py3.4 support

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> pyasn1-0.1.6.ebuild,
  pyasn1-0.1.7.ebuild:
  Add support for the new PyPy slotting.

  20 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> pyasn1-0.1.7.ebuild:
  Keyword ~amd64-linux ~x86-linux

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> pyasn1-0.1.7.ebuild:
  Stable for ppc64, wrt bug #474194

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> pyasn1-0.1.7.ebuild:
  Stable for ppc, wrt bug #474194

  15 Dec 2013; Agostino Sarubbo <ago@gentoo.org> pyasn1-0.1.7.ebuild:
  Stable for sparc, wrt bug #474194

  07 Dec 2013; Akinori Hattori <hattya@gentoo.org> pyasn1-0.1.7.ebuild:
  ia64 stable wrt bug #474194

  02 Dec 2013; Johannes Huber <johu@gentoo.org> pyasn1-0.1.7.ebuild:
  x86 stable, bug #474194

  04 Nov 2013; Matt Turner <mattst88@gentoo.org> pyasn1-0.1.7.ebuild:
  alpha stable, bug 474194.

  17 Oct 2013; Markus Meier <maekke@gentoo.org> pyasn1-0.1.7.ebuild:
  arm stable, bug #474194

  16 Oct 2013; Jeroen Roovers <jer@gentoo.org> pyasn1-0.1.7.ebuild:
  Stable for HPPA (bug #474194).

  14 Oct 2013; Tony Vroon <chainsaw@gentoo.org> pyasn1-0.1.7.ebuild:
  Marked stable on AMD64 based on arch tester report by Elijah "Armageddon" El
  Lazkani in bug #474194.

  13 Oct 2013; Pacho Ramos <pacho@gentoo.org> pyasn1-0.1.7.ebuild:
  Also compatible with python3_3
