@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>python</herd>
-	<upstream>
-		<remote-id type="pypi">pyasn1</remote-id>
-	</upstream>
+  <herd>python</herd>
+  <upstream>
+    <remote-id type="pypi">pyasn1</remote-id>
+  </upstream>
 </pkgmetadata>
