@@ -1,9 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1/pyasn1-0.1.7.ebuild,v 1.18 2014/09/03 17:13:21 ottxor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1/pyasn1-0.1.7.ebuild,v 1.19 2014/12/06 10:55:56 jlec Exp $
 
 EAPI="5"
-PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} pypy )
+
+PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} pypy pypy3 )
 
 inherit distutils-r1
 
